--- a/BackendTF/eks/k8s/EFK-Log/03_ElasticSearch_StatefulSet.yaml
+++ b/BackendTF/eks/k8s/EFK-Log/03_ElasticSearch_StatefulSet.yaml
@@ -87,7 +87,7 @@ spec:
           name: transport
           protocol: TCP
         volumeMounts:
-        - name: elasticsearch-logging
+        - name: elasticsearch-storage
           mountPath: /data
         env:
         - name: "NAMESPACE"
@@ -98,7 +98,7 @@ spec:
       volumes:
       - name: elasticsearch-storage
         persistentVolumeClaim:
-          claimName: elasticsearch-logging-pvc
+          claimName: elasticsearch-storage
       # Elasticsearch requires vm.max_map_count to be at least 262144.
       # If your OS already sets up this number to a higher value, feel free
       # to remove this init container.
@@ -112,9 +112,13 @@ spec:
   volumeClaimTemplates:
   - metadata:
       name: elasticsearch-storage
+      labels:
+        app: elasticsearch
+        role: storage
+      annotations:
+        "example.com/description": "Persistent storage for Elasticsearch"
     spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
-          storage: 10Gi 
-
+          storage: 10Gi
