--- a/BackendTF/eks/k8s/EFK-Log/03_ElasticSearch_StatefulSet.yaml
+++ b/BackendTF/eks/k8s/EFK-Log/03_ElasticSearch_StatefulSet.yaml
@@ -122,3 +122,6 @@ spec:
       resources:
         requests:
           storage: 10Gi
+
+          #User
+ #kubectl get pods -n kube-system | grep ebs-csi 之后是否存在
